--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8080
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/quiz_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=md123456ar
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
